SVN
- Update the unit tests to be more independent
- Fix bug 16960 - SEGV when fetching the results from a row producing procedure
- Fix bug 16990 - SEGV when executing a database procedure
- Fix bug 17510 - Fix php_ii_set_connect_options so they work as documented
- Add support for the Ingres BOOLEAN type
- Fix bug 17302 - _close_statement is unable to free active statements
- Fix bug 17207 - Under certain conditions the driver can SEGV when doing cleaning up
- Fix bug 17198 - Unable to close non-result statements
- Fix bug 17092 - SIGBUS when fetching data on 64-bit Solaris
- IIapi_getDescriptor() should only be called for SELECT statements
- Add ingres_fetch_assoc()
- Fix bug 16752 - Send all string values as IIAPI_VCH_TYPE
- Allow for a 0 offset in all ingres field functions 
- Update build scripts for OpenVMS CSWS PHP 2.0

2.2.1
- Fix bug 16688 - EXECUTE PROCEDURE statements fail with DESCRIBE INPUT

2.2.0
- Fix bug 16668 - Update ii_result->tranhandle after calling IIapi_autocommit()
- Add support for fetching/putting LONG NVARCHAR data
- Fix bug 16616 - auto commit emulation failed with a SELECT followed by an INSERT
- Fix bug 16075 - improper clean up of old resource values causing SEGV
- Add arginfo to provide reflection access to the internals
- When II_SYSTEM is not defined provide a link to the documentation showing how to set it up
- Fix bug 16539 - Stale connections fail to be disconnected using IIapi_disconnect()
- Fix bug 16539 - Binding UTF-8 data causes an additional NULL to be sent to the server
- Fix GPF on Windows with sql.safe_mode and undefined ingres.default_database
- Fix ingres_prepare() and ingres_execute() so they actually work
- Make sql_safe_mode use ingres.default_database
- ingres_fetch_proc_return should return NULL if no value is available
- Add ingres_unbuffered_query()
- Handle leading white-space characters in query detection (thanks Alex Trofast)

2.1.0